--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,15 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Imports: 
+    dbplyr,
+    dplyr,
+    ggplot2,
+    magrittr,
+    purrr,
+    RSQLite,
+    stringr,
+    tibble
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
