--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,9 @@ Imports:
     purrr,
     RSQLite,
     stringr,
-    tibble
+    tibble,
+    tictoc,
+    vroom
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
